Fix/update headers a little bit

--- a/configs/aliases.cfg
+++ b/configs/aliases.cfg
@@ -1,7 +1,6 @@
-// ==================================================================
-// aliases.cfg: Set up for voting and general game mode configuration
-// Scripted by: Samual, Naryl, atheros
-// ==================================================================
+// =======================================================
+//  Set up for voting and general game mode configuration
+// =======================================================
 
 // These are advanced settings you can use to manage voting and such:
 // Check to see if the server config was made specifically for this aliases file... 
@@ -41,9 +40,9 @@ add_extra_vote "tourney_settings pickup_settings public_settings"
 set _pickup_gamemodes "duel dm ft tdm ctf ca assault ka nb dom kh rune arena lms ons"
 set _pickup_options ""
 
-// =========================
-// Specific gametype options
-// =========================
+// ===========================
+//  Specific gametype options
+// ===========================
 alias tourney-duel              "gametype dm; g_powerups 0; timelimit_override 15"
 alias tourney-dm                "gametype dm"
 alias tourney-ft                "gametype freezetag"
@@ -90,9 +89,9 @@ alias public-lms                "gametype lms"
 alias public-ons                "gametype onslaught"
 
 
-// ===========================
-// Public aliases and settings
-// ===========================
+// =============================
+//  Public aliases and settings
+// =============================
 alias dm                "${_server_type}_settings;        ${_server_type}-dm;      do_endmatch"
 alias freezetag         "${_server_type}_settings;        ${_server_type}-ft;      do_endmatch"
 alias tdm               "${_server_type}_settings;        ${_server_type}-tdm;     do_endmatch"
@@ -118,9 +117,9 @@ alias nb "nexball"
 add_extra_vote "as dm tdm ctf ca freezetag assault keepaway ka nexball nb kh keyhunt dom domination rune arena lms ons onslaught"
 
 
-// ===========================
-// Pickup aliases and settings
-// ===========================
+// =============================
+//  Pickup aliases and settings
+// =============================
 alias duel "${_server_type}_settings; ${_server_type}-duel; g_maxplayers 2; do_endmatch"
 alias 1v1 "duel"; alias dm1v1 "duel"; alias 1v1dm "duel"; alias 1on1 "duel"; alias dm1on1 "duel"; alias 1on1dm "duel"
 add_extra_vote "duel 1v1 dm1v1 1v1dm 1on1 dm1on1 1on1dm"
@@ -153,9 +152,9 @@ add_alias_NvN ft
 //add_alias_NvN dom
 
 
-// =============
-// Miscellaneous 
-// =============
+// ===============
+//  Miscellaneous 
+// ===============
 // mutators
 alias _jetpack "toggle g_jetpack; g_grappling_hook 0; g_start_weapon_hook -1"
 alias _hook "toggle g_grappling_hook; toggle g_start_weapon_hook \"0\" \"-1\"; g_jetpack 0"
