Runematch is no longer supported

--- a/configs/aliases.cfg
+++ b/configs/aliases.cfg
@@ -37,7 +37,7 @@ alias public_settings "default_settings; fraglimit_override -1; timelimit_overti
 add_extra_vote "tourney_settings pickup_settings public_settings"
 
 // Information used for pickup bot if your server is added to that (see #xonotic.pickup on irc.quakenet.org)
-set _pickup_gamemodes "duel dm ft tdm ctf ca assault ka nb dom kh rune arena lms ons"
+set _pickup_gamemodes "duel dm ft tdm ctf ca assault ka nb dom kh arena lms ons"
 set _pickup_options ""
 
 // ===========================
