Updates for clarification and organization in the aliases.cfg file

--- a/configs/aliases.cfg
+++ b/configs/aliases.cfg
@@ -2,10 +2,8 @@
 //  Set up for voting and general game mode configuration
 // =======================================================
 
-// These are advanced settings you can use to manage voting and such:
 // Check to see if the server config was made specifically for this aliases file... 
 // if not, just act "normal". (allow all votes, execution of endmatch, and have public settings)
-
 alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 1"; check_aev_${_allow_extra_votes} // Allow extra votes (like mutators, private matches, etc) to be added 
 alias check_di_${_done_initializing} "set _done_initializing 1"; check_di_${_done_initializing} // used in server.cfg to allow selection of a game mode without 
 alias check_svt_${_server_type} "set _server_type public"; check_svt_${_server_type} // switch between tourney (strict gameplay settings with special votes), pickup (tourney but less strict), public (totally non-strict)
@@ -15,20 +13,27 @@ alias add_extra_vote_1 "addvote $*"
 alias add_extra_vote_0 ""
 alias add_extra_vote "add_extra_vote_${_allow_extra_votes} $*"
 
-// if public, add public gametype votes
+// if public, add public gametype votes // TODO: This is unused, should we keep it?
 //alias add_public_vote_tourney ""
 //alias add_public_vote_pickup ""
 //alias add_public_vote_public "add_extra_vote $*"
 //alias add_public_vote "add_public_vote_${_server_type} $*"
 
+// conditional command: run endmatch only when no longer initializing (loading map)
 alias do_endmatch_1 "endmatch"
 alias do_endmatch_0 "echo NOTE: Still initializing, not ending match"
 alias do_endmatch "do_endmatch_${_done_initializing}"
 
+// conditional command: run restart only when no longer initializing (loading map)
 alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
+// environment selection:
+//  default_settings is executed to clear all possible optional properties
+//  tourney_settings is used for strict tournament or highly competitive servers
+//  pickup_settings is used for a more relaxed competitive environment
+//  public_settings is used for casual servers
 alias default_settings "g_powerups 1; _nomutators; g_pickup_respawntime_weapon 10; g_weapon_stay 0; sv_autoscreenshot 0; g_chat_nospectators 0; g_tourney 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0"
 alias tourney_settings "default_settings; fraglimit_override 0; timelimit_overtimes 2; g_tourney 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
 alias pickup_settings "default_settings; fraglimit_override 0; timelimit_overtimes 2; g_warmup 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
@@ -40,9 +45,10 @@ add_extra_vote "tourney_settings pickup_settings public_settings"
 set _pickup_gamemodes "duel dm ft tdm ctf ca assault ka nb dom kh arena lms ons"
 set _pickup_options ""
 
-// ===========================
-//  Specific gametype options
-// ===========================
+
+// ===========================================
+//  Specific gametype and environment options
+// ===========================================
 alias tourney-duel              "gametype dm; g_powerups 0; timelimit_override 15"
 alias tourney-dm                "gametype dm"
 alias tourney-ft                "gametype freezetag"
@@ -142,6 +148,7 @@ alias add_alias_6v6 "alias 6v6${1} \"${_server_type}_settings; ${_server_type}-$
 
 alias add_alias_NvN "add_alias_2v2 $1; add_alias_3v3 $1; add_alias_4v4 $1; add_alias_5v5 $1; add_alias_6v6 $1"
 
+// this gets really spammy very quickly, choose carefully the game modes we actually want here
 add_alias_NvN ca
 add_alias_NvN tdm
 add_alias_NvN ctf
@@ -152,10 +159,10 @@ add_alias_NvN ft
 //add_alias_NvN dom
 
 
-// ===============
-//  Miscellaneous 
-// ===============
-// mutators
+// ==========
+//  Mutators
+// ==========
+// internal aliases (only used by our scripts)
 alias _jetpack "toggle g_jetpack; g_grappling_hook 0; g_start_weapon_hook -1"
 alias _hook "toggle g_grappling_hook; toggle g_start_weapon_hook \"0\" \"-1\"; g_jetpack 0"
 alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_minstagib 0"
@@ -165,6 +172,7 @@ alias _pinata "toggle g_pinata"
 alias _midair "toggle g_midair"
 alias _dodging "toggle g_dodging"
 
+// external aliases (visible to players when _allow_extra_votes is enabled, usable by rcon)
 alias jetpack "_jetpack; do_restart"
 alias hook "_hook; do_restart"
 alias grapplinghook "hook"
@@ -184,6 +192,10 @@ alias nomutators "_nomutators; do_restart"
 
 add_extra_vote "jetpack hook grapplinghook weaponarena hookarena jetpackarena minstagib minstahook minstajetpack infammo pinata midair dodging nomutators"
 
+
+// ===============
+//  Miscellaneous 
+// ===============
 alias warmup "toggle g_warmup; do_restart"
 alias enablebots "minplayers 4"
 alias nobots "minplayers 0; bot_number 0"
