--- a/configs/sv-private-1.cfg
+++ b/configs/sv-private-1.cfg
@@ -32,8 +32,8 @@ prvm_errordump 1
 // ===============================
 //  Log files and networked stuff
 // ===============================
-//g_ban_sync_uri "http://94.23.21.40/~xonotic/bans/" // sync bans using this ban list provider
-//g_ban_sync_trusted_servers "" // accept bans that were initially set on the server IPs listed here
+g_ban_sync_uri "http://46.38.241.138/~xonotic/bans/" // sync bans using this ban list provider (disabled by default, uncomment this line to enable)
+//g_ban_sync_trusted_servers "" // accept bans that were initially set on the server IPs listed here (if not set, your bans are just sent to the sync URIs, but no bans are retrieved from there)
 log_file "log-${serverconfig}.log"
 sv_weaponstats_file "http://xonotic.org/weaponbalance/" // "stats-${serverconfig}.log"
 g_playerstats_uri "http://stats.xonotic.org/stats/submit"
