Fix typo in configs

--- a/configs.pk3dir/profile-uc.cfg
+++ b/configs.pk3dir/profile-uc.cfg
@@ -9,7 +9,7 @@ set _location "Germany"
 set _version "Xonotic git"
 hostname "${_servertag} ${_version} ${_description} (${_location})"
 
-set _motd_intro "Welcome to the ${hostname}'
+set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "[unconnected] clan"
 set _motd_contact "irc.quakenet.org : #unconnected.xonotic or #uc.xon"
 set _motd_host "named ${_servername} : Provided by [unconnected]CaptainJack"
