--- a/configs.pk3dir/profile-bitmissile.cfg
+++ b/configs.pk3dir/profile-bitmissile.cfg
@@ -9,7 +9,7 @@ set _location "New Jersey"
 set _version "Xonotic 0.7"
 hostname "${_servertag} ${_version} ${_description} (${_location})"
 
-set _motd_intro "Welcome to the ${hostname}'
+set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "developer Samual \"Ares\" Lenks"
 set _motd_contact "samual@xonotic.org or irc.freenode.org : #xonotic"
 set _motd_host "named ${_servername} : Provided by Bitmissile.com"
