--- a/configs.pk3dir/profile-wtwrp.cfg
+++ b/configs.pk3dir/profile-wtwrp.cfg
@@ -9,7 +9,7 @@ set _location "Germany"
 set _version "Xonotic 0.7"
 hostname "${_servertag} ${_version} ${_description} (${_location})"
 
-set _motd_intro "Welcome to the ${hostname}'
+set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "the HUB server group"
 set _motd_contact "samual@xonotic.org or irc.freenode.org : #xonotic.hub"
 set _motd_host "named ${_servername} : Provided by wtwrp.de"
