Remove yet another instance of Rune

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -120,7 +120,7 @@ alias ons "onslaught"
 alias ka "keepaway"
 alias nb "nexball"
 
-add_extra_vote "as dm tdm ctf ca freezetag assault keepaway ka nexball nb kh keyhunt dom domination rune arena lms ons onslaught"
+add_extra_vote "as dm tdm ctf ca freezetag assault keepaway ka nexball nb kh keyhunt dom domination arena lms ons onslaught"
 
 
 // =============================
