Set _server_type when changing server type

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -35,9 +35,9 @@ alias do_restart "do_restart_${_done_initializing}"
 //  pickup_settings is used for a more relaxed competitive environment
 //  public_settings is used for casual servers
 alias default_settings "g_powerups 1; _nomutators; g_pickup_respawntime_weapon 10; g_weapon_stay 0; sv_autoscreenshot 0; g_chat_nospectators 0; g_tourney 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0"
-alias tourney_settings "default_settings; fraglimit_override 0; timelimit_overtimes 2; g_tourney 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
-alias pickup_settings "default_settings; fraglimit_override 0; timelimit_overtimes 2; g_warmup 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
-alias public_settings "default_settings; fraglimit_override -1; timelimit_overtimes 0; g_warmup 0; enablebots; teamplay_mode 4;"
+alias tourney_settings "default_settings; _server_type tourney; fraglimit_override 0; timelimit_overtimes 2; g_tourney 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
+alias pickup_settings "default_settings; _server_type pickup; fraglimit_override 0; timelimit_overtimes 2; g_warmup 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
+alias public_settings "default_settings; _server_type public; fraglimit_override -1; timelimit_overtimes 0; g_warmup 0; enablebots; teamplay_mode 4;"
 
 add_extra_vote "tourney_settings pickup_settings public_settings"
 
