Begin working on gametype specific maplists

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -49,20 +49,20 @@ set _pickup_options ""
 // ===========================================
 //  Specific gametype and environment options
 // ===========================================
-alias tourney-duel     "gametype dm; g_powerups 0; timelimit_override 15"
-alias tourney-dm       "gametype dm"
-alias tourney-ft       "gametype freezetag"
-alias tourney-tdm      "gametype tdm; g_pickup_respawntime_weapon 15"
-alias tourney-ctf      "gametype ctf; g_pickup_respawntime_weapon 5"
-alias tourney-ca       "gametype ca; teamplay_mode 1"
-alias tourney-assault  "gametype as; g_weapon_stay 1"
-alias tourney-ka       "gametype keepaway"
-alias tourney-nb       "gametype nexball"
-alias tourney-dom      "gametype dom"
-alias tourney-kh       "gametype kh"
-alias tourney-arena    "gametype arena"
-alias tourney-lms      "gametype lms"
-alias tourney-ons      "gametype onslaught"
+alias tourney-duel     "gametype dm;         _maplist_;        g_powerups 0; timelimit_override 15"
+alias tourney-dm       "gametype dm;         _maplist_;        "
+alias tourney-ft       "gametype freezetag;  _maplist_;        "
+alias tourney-tdm      "gametype tdm;        _maplist_;        g_pickup_respawntime_weapon 15"
+alias tourney-ctf      "gametype ctf;        _maplist_;        g_pickup_respawntime_weapon 5"
+alias tourney-ca       "gametype ca;         _maplist_;        teamplay_mode 1"
+alias tourney-assault  "gametype as;         _maplist_;        g_weapon_stay 1"
+alias tourney-ka       "gametype keepaway;   _maplist_;        "
+alias tourney-nb       "gametype nexball;    _maplist_;        "
+alias tourney-dom      "gametype dom;        _maplist_;        "
+alias tourney-kh       "gametype kh;         _maplist_;        "
+alias tourney-arena    "gametype arena;      _maplist_;        "
+alias tourney-lms      "gametype lms;        _maplist_;        "
+alias tourney-ons      "gametype onslaught;  _maplist_;        "
 
 alias pickup-duel     "gametype dm; g_powerups 0; timelimit_override 10"
 alias pickup-dm       "gametype dm"
@@ -93,6 +93,9 @@ alias public-kh       "gametype kh"
 alias public-arena    "gametype arena"
 alias public-lms      "gametype lms"
 alias public-ons      "gametype onslaught"
+
+// TODO: Add Race/CTS
+// TODO: Should we use "ft" instead of "freezetag" and such?
 
 
 // =============================
