Add maplists now

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -49,53 +49,59 @@ set _pickup_options ""
 // ===========================================
 //  Specific gametype and environment options
 // ===========================================
-alias tourney-duel     "gametype dm;         _maplist_;        g_powerups 0; timelimit_override 15"
-alias tourney-dm       "gametype dm;         _maplist_;        "
-alias tourney-ft       "gametype freezetag;  _maplist_;        "
-alias tourney-tdm      "gametype tdm;        _maplist_;        g_pickup_respawntime_weapon 15"
-alias tourney-ctf      "gametype ctf;        _maplist_;        g_pickup_respawntime_weapon 5"
-alias tourney-ca       "gametype ca;         _maplist_;        teamplay_mode 1"
-alias tourney-assault  "gametype as;         _maplist_;        g_weapon_stay 1"
-alias tourney-ka       "gametype keepaway;   _maplist_;        "
-alias tourney-nb       "gametype nexball;    _maplist_;        "
-alias tourney-dom      "gametype dom;        _maplist_;        "
-alias tourney-kh       "gametype kh;         _maplist_;        "
-alias tourney-arena    "gametype arena;      _maplist_;        "
-alias tourney-lms      "gametype lms;        _maplist_;        "
-alias tourney-ons      "gametype onslaught;  _maplist_;        "
+alias _maplist_all   "g_maplist \"abyss afterslime aggressorx apace assispace_v6 astralcity atelier atomforge attic aurora aviation azalea bloodrun_a2 bluez_vs_redz breath_b7 campgrounds_beta4 capturecity-v2r2 catharsis-v06 chronic controlfactor_v3 courtfun cpm27_nex_r1 dance darkzone desertfactory_v1 distortion-v3-r3 dm_castle downer_final drain dreadfulplace_v1 equinox farewell fe26 final_rage_duel_v2 fuse g-23 geoplanetary glowplant grudge hub3aeroq3a_nex_r4 hydroxon implosion imprisoned-final_r3 jasm lethargy lightspeed mIKEctf2_nex_r3 magnet minigrudge mojoctf_v3 monstrosity_a3r1 moonstone_nex_r3 new-station_r1 newtonian-nightmare oilrig opium_v4 ospdm1_nex_r2 ospdm5_nex_r2 overkill pushme reservoir_r6 runningman runningmanctf rush_b1 silentsiege skycastle solace_b6 solarium space-elevator spatium-a4 spiderctf-v3 stormkeep strength syntheticv1 tarx toxic voll_aufs_maul_v3 vorix warfare xoylent xoylent_ctf zenith\""
+alias _maplist_ctf   "g_maplist \"abyss apace assispace_v6 astralcity attic aurora aviation bluez_vs_redz capturecity-v2r2 catharsis-v06 controlfactor_v3 courtfun dance distortion-v3-r3 dm_castle equinox geoplanetary hydroxon implosion lightspeed magnet mIKEctf2_nex_r3 mojoctf_v3 moonstone_nex_r3 newtonian-nightmare reservoir_r6 runningmanctf skycastle space-elevator spatium-a4 spiderctf-v3 tarx vorix xoylent_ctf\""
+alias _maplist_ca    "g_maplist \"afterslime atelier azalea breath_b7 campgrounds_beta4 chronic cpm27_nex_r1 desertfactory_v1 farewell glowplant lethargy new-station_r1 overkill runningmanctf silentsiege solace_b6 stormkeep xoylent\""
+alias _maplist_dm    "g_maplist \"afterslime aggressorx atelier atomforge azalea darkzone downer_final drain dreadfulplace_v1 farewell final_rage_duel_v2 fuse g-23 glowplant jasm lethargy minigrudge monstrosity_a3r1 new-station_r1 oilrig opium_v4 pushme runningman silentsiege solarium stormkeep toxic voll_aufs_maul_v3 warfare zenith\""
+alias _maplist_duel  "g_maplist \"aggressorx bloodrun_a2 darkzone downer_final drain fe26 final_rage_duel_v2 fuse hub3aeroq3a_nex_r4 imprisoned-final_r3 lethargy opium_v4 silentsiege stormkeep syntheticv1 warfare xoylent\""
+alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 final_rage_duel_v2 grudge minigrudge monstrosity_a3r1 opium_v4 ospdm1_nex_r2 ospdm5_nex_r2 rush_b1 silentsiege stormkeep strength voll_aufs_maul_v3 xoylent\""
 
-alias pickup-duel     "gametype dm; g_powerups 0; timelimit_override 10"
-alias pickup-dm       "gametype dm"
-alias pickup-ft       "gametype freezetag"
-alias pickup-tdm      "gametype tdm;"
-alias pickup-ctf      "gametype ctf;"
-alias pickup-ca       "gametype ca; teamplay_mode 1"
-alias pickup-assault  "gametype as; g_weapon_stay 1"
-alias pickup-ka       "gametype keepaway"
-alias pickup-nb       "gametype nexball"
-alias pickup-dom      "gametype dom"
-alias pickup-kh       "gametype kh"
-alias pickup-arena    "gametype arena"
-alias pickup-lms      "gametype lms"
-alias pickup-ons      "gametype onslaught"
+alias tourney-duel     "gametype dm;     _maplist_duel;  g_powerups 0; timelimit_override 15"
+alias tourney-dm       "gametype dm;     _maplist_dm;    "
+alias tourney-ft       "gametype ft;     _maplist_all;   "
+alias tourney-tdm      "gametype tdm;    _maplist_tdm;   g_pickup_respawntime_weapon 15"
+alias tourney-ctf      "gametype ctf;    _maplist_ctf;   g_pickup_respawntime_weapon 5"
+alias tourney-ca       "gametype ca;     _maplist_ca;    teamplay_mode 1"
+alias tourney-assault  "gametype as;     _maplist_all;   g_weapon_stay 1"
+alias tourney-ka       "gametype ka;     _maplist_all;   "
+alias tourney-nb       "gametype nb;     _maplist_all;   "
+alias tourney-dom      "gametype dom;    _maplist_all;   "
+alias tourney-kh       "gametype kh;     _maplist_all;   "
+alias tourney-arena    "gametype arena;  _maplist_all;   "
+alias tourney-lms      "gametype lms;    _maplist_all;   "
+alias tourney-ons      "gametype ons;    _maplist_all;   "
 
-alias public-duel     "gametype dm; g_powerups 0; timelimit_override 10"
-alias public-dm       "gametype dm"
-alias public-ft       "gametype freezetag"
-alias public-tdm      "gametype tdm"
-alias public-ctf      "gametype ctf"
-alias public-ca       "gametype ca; teamplay_mode 1"
-alias public-assault  "gametype as"
-alias public-ka       "gametype keepaway"
-alias public-nb       "gametype nexball"
-alias public-dom      "gametype dom"
-alias public-kh       "gametype kh"
-alias public-arena    "gametype arena"
-alias public-lms      "gametype lms"
-alias public-ons      "gametype onslaught"
+alias pickup-duel     "gametype dm;     _maplist_duel;  g_powerups 0; timelimit_override 10"
+alias pickup-dm       "gametype dm;     _maplist_dm;    "
+alias pickup-ft       "gametype ft;     _maplist_all;   "
+alias pickup-tdm      "gametype tdm;    _maplist_tdm;   "
+alias pickup-ctf      "gametype ctf;    _maplist_ctf;   "
+alias pickup-ca       "gametype ca;     _maplist_ca;    teamplay_mode 1"
+alias pickup-assault  "gametype as;     _maplist_all;   g_weapon_stay 1"
+alias pickup-ka       "gametype ka;     _maplist_all;   "
+alias pickup-nb       "gametype nb;     _maplist_all;   "
+alias pickup-dom      "gametype dom;    _maplist_all;   "
+alias pickup-kh       "gametype kh;     _maplist_all;   "
+alias pickup-arena    "gametype arena;  _maplist_all;   "
+alias pickup-lms      "gametype lms;    _maplist_all;   "
+alias pickup-ons      "gametype ons;    _maplist_all;   "
+
+alias public-duel     "gametype dm;     _maplist_duel;  g_powerups 0; timelimit_override 10"
+alias public-dm       "gametype dm;     _maplist_dm;    "
+alias public-ft       "gametype ft;     _maplist_all;   "
+alias public-tdm      "gametype tdm;    _maplist_tdm;   "
+alias public-ctf      "gametype ctf;    _maplist_ctf;   "
+alias public-ca       "gametype ca;     _maplist_ca;    teamplay_mode 1"
+alias public-assault  "gametype as;     _maplist_all;   "
+alias public-ka       "gametype ka;     _maplist_all;   "
+alias public-nb       "gametype nb;     _maplist_all;   "
+alias public-dom      "gametype dom;    _maplist_all;   "
+alias public-kh       "gametype kh;     _maplist_all;   "
+alias public-arena    "gametype arena;  _maplist_all;   "
+alias public-lms      "gametype lms;    _maplist_all;   "
+alias public-ons      "gametype ons;    _maplist_all;   "
 
 // TODO: Add Race/CTS
-// TODO: Should we use "ft" instead of "freezetag" and such?
 
 
 // =============================
