--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -56,50 +56,50 @@ alias _maplist_dm    "g_maplist \"afterslime aggressorx atelier atomforge azalea
 alias _maplist_duel  "g_maplist \"aggressorx bloodrun_a2 darkzone downer_final drain fe26 final_rage_duel_v2 fuse hub3aeroq3a_nex_r4 imprisoned-final_r3 lethargy opium_v4 silentsiege stormkeep syntheticv1 warfare xoylent\""
 alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 final_rage_duel_v2 grudge minigrudge monstrosity_a3r1 opium_v4 ospdm1_nex_r2 ospdm5_nex_r2 rush_b1 silentsiege stormkeep strength voll_aufs_maul_v3 xoylent\""
 
-alias tourney-duel     "gametype dm;     _maplist_duel;  g_powerups 0; timelimit_override 15"
-alias tourney-dm       "gametype dm;     _maplist_dm;    "
-alias tourney-ft       "gametype ft;     _maplist_all;   "
-alias tourney-tdm      "gametype tdm;    _maplist_tdm;   g_pickup_respawntime_weapon 15"
-alias tourney-ctf      "gametype ctf;    _maplist_ctf;   g_pickup_respawntime_weapon 5"
-alias tourney-ca       "gametype ca;     _maplist_ca;    teamplay_mode 1"
-alias tourney-assault  "gametype as;     _maplist_all;   g_weapon_stay 1"
-alias tourney-ka       "gametype ka;     _maplist_all;   "
-alias tourney-nb       "gametype nb;     _maplist_all;   "
-alias tourney-dom      "gametype dom;    _maplist_all;   "
-alias tourney-kh       "gametype kh;     _maplist_all;   "
-alias tourney-arena    "gametype arena;  _maplist_all;   "
-alias tourney-lms      "gametype lms;    _maplist_all;   "
-alias tourney-ons      "gametype ons;    _maplist_all;   "
+alias tourney-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 15"
+alias tourney-dm       "_maplist_dm;    gametype dm;     "
+alias tourney-ft       "_maplist_all;   gametype ft;     "
+alias tourney-tdm      "_maplist_tdm;   gametype tdm;    g_pickup_respawntime_weapon 15"
+alias tourney-ctf      "_maplist_ctf;   gametype ctf;    g_pickup_respawntime_weapon 5"
+alias tourney-ca       "_maplist_ca;    gametype ca;     teamplay_mode 1"
+alias tourney-assault  "_maplist_all;   gametype as;     g_weapon_stay 1"
+alias tourney-ka       "_maplist_all;   gametype ka;     "
+alias tourney-nb       "_maplist_all;   gametype nb;     "
+alias tourney-dom      "_maplist_all;   gametype dom;    "
+alias tourney-kh       "_maplist_all;   gametype kh;     "
+alias tourney-arena    "_maplist_all;   gametype arena;  "
+alias tourney-lms      "_maplist_all;   gametype lms;    "
+alias tourney-ons      "_maplist_all;   gametype ons;    "
 
-alias pickup-duel     "gametype dm;     _maplist_duel;  g_powerups 0; timelimit_override 10"
-alias pickup-dm       "gametype dm;     _maplist_dm;    "
-alias pickup-ft       "gametype ft;     _maplist_all;   "
-alias pickup-tdm      "gametype tdm;    _maplist_tdm;   "
-alias pickup-ctf      "gametype ctf;    _maplist_ctf;   "
-alias pickup-ca       "gametype ca;     _maplist_ca;    teamplay_mode 1"
-alias pickup-assault  "gametype as;     _maplist_all;   g_weapon_stay 1"
-alias pickup-ka       "gametype ka;     _maplist_all;   "
-alias pickup-nb       "gametype nb;     _maplist_all;   "
-alias pickup-dom      "gametype dom;    _maplist_all;   "
-alias pickup-kh       "gametype kh;     _maplist_all;   "
-alias pickup-arena    "gametype arena;  _maplist_all;   "
-alias pickup-lms      "gametype lms;    _maplist_all;   "
-alias pickup-ons      "gametype ons;    _maplist_all;   "
+alias pickup-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 10"
+alias pickup-dm       "_maplist_dm;    gametype dm;     "
+alias pickup-ft       "_maplist_all;   gametype ft;     "
+alias pickup-tdm      "_maplist_tdm;   gametype tdm;    "
+alias pickup-ctf      "_maplist_ctf;   gametype ctf;    "
+alias pickup-ca       "_maplist_ca;    gametype ca;     teamplay_mode 1"
+alias pickup-assault  "_maplist_all;   gametype as;     g_weapon_stay 1"
+alias pickup-ka       "_maplist_all;   gametype ka;     "
+alias pickup-nb       "_maplist_all;   gametype nb;     "
+alias pickup-dom      "_maplist_all;   gametype dom;    "
+alias pickup-kh       "_maplist_all;   gametype kh;     "
+alias pickup-arena    "_maplist_all;   gametype arena;  "
+alias pickup-lms      "_maplist_all;   gametype lms;    "
+alias pickup-ons      "_maplist_all;   gametype ons;    "
 
-alias public-duel     "gametype dm;     _maplist_duel;  g_powerups 0; timelimit_override 10"
-alias public-dm       "gametype dm;     _maplist_dm;    "
-alias public-ft       "gametype ft;     _maplist_all;   "
-alias public-tdm      "gametype tdm;    _maplist_tdm;   "
-alias public-ctf      "gametype ctf;    _maplist_ctf;   "
-alias public-ca       "gametype ca;     _maplist_ca;    teamplay_mode 1"
-alias public-assault  "gametype as;     _maplist_all;   "
-alias public-ka       "gametype ka;     _maplist_all;   "
-alias public-nb       "gametype nb;     _maplist_all;   "
-alias public-dom      "gametype dom;    _maplist_all;   "
-alias public-kh       "gametype kh;     _maplist_all;   "
-alias public-arena    "gametype arena;  _maplist_all;   "
-alias public-lms      "gametype lms;    _maplist_all;   "
-alias public-ons      "gametype ons;    _maplist_all;   "
+alias public-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 10"
+alias public-dm       "_maplist_dm;    gametype dm;     "
+alias public-ft       "_maplist_all;   gametype ft;     "
+alias public-tdm      "_maplist_tdm;   gametype tdm;    "
+alias public-ctf      "_maplist_ctf;   gametype ctf;    "
+alias public-ca       "_maplist_ca;    gametype ca;     teamplay_mode 1"
+alias public-assault  "_maplist_all;   gametype as;     "
+alias public-ka       "_maplist_all;   gametype ka;     "
+alias public-nb       "_maplist_all;   gametype nb;     "
+alias public-dom      "_maplist_all;   gametype dom;    "
+alias public-kh       "_maplist_all;   gametype kh;     "
+alias public-arena    "_maplist_all;   gametype arena;  "
+alias public-lms      "_maplist_all;   gametype lms;    "
+alias public-ons      "_maplist_all;   gametype ons;    "
 
 // TODO: Add Race/CTS
 
