Use _continent_small for area description currently

--- a/configs.pk3dir/profile-bitmissile.cfg
+++ b/configs.pk3dir/profile-bitmissile.cfg
@@ -7,7 +7,7 @@ set _continent "American"
 set _continent_small "NA"
 set _location "New Jersey"
 set _version "Xonotic 0.7"
-hostname "${_servertag} ${_version} ${_description} (${_location})"
+hostname "${_servertag} ${_version} ${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "developer Samual \"Ares\" Lenks"
