--- a/configs.pk3dir/profile-wtwrp.cfg
+++ b/configs.pk3dir/profile-wtwrp.cfg
@@ -7,7 +7,7 @@ set _continent "European"
 set _continent_small "EU"
 set _location "Germany"
 set _version "Xonotic 0.7"
-hostname "${_servertag} ${_version} ${_description} (${_location})"
+hostname "${_servertag} ${_version} ${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "the HUB server group"
