Massive updates to aliases.cfg, much better handling of server settings

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -34,10 +34,13 @@ alias do_restart "do_restart_${_done_initializing}"
 //  tourney_settings is used for strict tournament or highly competitive servers
 //  pickup_settings is used for a more relaxed competitive environment
 //  public_settings is used for casual servers
-alias default_settings "g_powerups 1; _nomutators; g_pickup_respawntime_weapon 10; g_weapon_stay 0; sv_autoscreenshot 0; g_chat_nospectators 0; g_tourney 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0"
-alias tourney_settings "default_settings; _server_type tourney; fraglimit_override 0; timelimit_overtimes 2; g_tourney 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
-alias pickup_settings "default_settings; _server_type pickup; fraglimit_override 0; timelimit_overtimes 2; g_warmup 1; nobots; teamplay_mode 2; sv_autoscreenshot 1" 
-alias public_settings "default_settings; _server_type public; fraglimit_override -1; timelimit_overtimes 0; g_warmup 0; enablebots; teamplay_mode 4;"
+// notes:
+//  any non-default settings added to the special environments MUST be added to default_settings with default value
+//  if a gametype alias from down below uses a cvar, its default must be added to default_settings
+alias default_settings "_nomutators; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
+alias tourney_settings "default_settings; _server_type tourney; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+alias pickup_settings "default_settings; _server_type pickup; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+alias public_settings "default_settings; _server_type public; enablebots; g_start_delay 15"
 
 add_extra_vote "tourney_settings pickup_settings public_settings"
 
@@ -56,6 +59,7 @@ alias _maplist_dm    "g_maplist \"afterslime aggressorx atelier atomforge azalea
 alias _maplist_duel  "g_maplist \"aggressorx bloodrun_a2 darkzone downer_final drain fe26 final_rage_duel_v2 fuse hub3aeroq3a_nex_r4 imprisoned-final_r3 lethargy opium_v4 silentsiege stormkeep syntheticv1 warfare xoylent\""
 alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 final_rage_duel_v2 grudge minigrudge monstrosity_a3r1 opium_v4 ospdm1_nex_r2 ospdm5_nex_r2 rush_b1 silentsiege stormkeep strength voll_aufs_maul_v3 xoylent\""
 
+// any cvar added here must be added to default_settings with default value
 alias tourney-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 15"
 alias tourney-dm       "_maplist_dm;    gametype dm;     "
 alias tourney-ft       "_maplist_all;   gametype ft;     "
@@ -101,7 +105,7 @@ alias public-arena    "_maplist_all;   gametype arena;  "
 alias public-lms      "_maplist_all;   gametype lms;    "
 alias public-ons      "_maplist_all;   gametype ons;    "
 
-// TODO: Add Race/CTS
+// TODO: Add Race/CTS, also add g_balance_kill_delay 0 along with it
 
 
 // =============================
