Add comments for net_address and sv_curl_defaulturl

--- a/configs.pk3dir/sv-private-1.cfg
+++ b/configs.pk3dir/sv-private-1.cfg
@@ -21,7 +21,7 @@ set _server_type pickup
 // =================
 port 27500 // 000-499 is public range, 500+ is private range
 maxplayers 32
-//net_address ""
+//net_address "" // set in the profile config
 sv_public 0
 sv_status_privacy 0
 sv_maxrate 30000
@@ -38,7 +38,7 @@ log_file "${_profile}${sessionid}.log"
 sv_weaponstats_file "http://xonotic.org/weaponbalance/" // "stats-${serverconfig}.log"
 g_playerstats_uri "http://stats.xonotic.org/stats/submit"
 g_playerstats_debug 1
-//sv_curl_defaulturl ""
+//sv_curl_defaulturl "" // set in the profile config
 
 // =============================
 //  Maplist, voting and aliases
