Other settings cleanup

--- a/configs.pk3dir/sv-private-1.cfg
+++ b/configs.pk3dir/sv-private-1.cfg
@@ -47,9 +47,8 @@ g_playerstats_uri "http://stats.xonotic.org/stats/submit"
 sv_vote_commands "restart fraglimit chmap gotomap nextmap endmatch reducematchtime extendmatchtime allready kick cointoss movetoteam_auto"
 sv_vote_call 1 // 0 will disable the normal voting
 sv_vote_master 0 // 0 will disable voting to become master, good if you prefer to use the master password instead
-g_maplist ""
+g_maplist "" // set in aliases.cfg
 g_maplist_votable 6
-g_maplist_shuffle 1
 g_maplist_votable_abstain 1
 g_maplist_votable_nodetail 0
 g_maplist_mostrecent_count 2
@@ -59,7 +58,6 @@ exec aliases.cfg
 //  Miscellaneous game setup
 // ==========================
 g_warmup_limit -1
-
 duel // finally execute a chosen game mode from the aliases.cfg file
 
 // ===================
