Update server hostname creation

--- a/configs.pk3dir/profile-smb.cfg
+++ b/configs.pk3dir/profile-smb.cfg
@@ -2,12 +2,12 @@
 //  Server information
 // ====================
 set _servername "smb"
-set _servertag "[HUB]"
+set _servertag "[HUB] SMB"
 set _continent "Australian"
 set _continent_small "AU"
 set _location "Queensland"
-set _version "Xonotic 0.7"
-hostname "${_servertag} ${_version} ${_description} (${_continent_small})"
+set _version "Git "
+hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "the HUB server group"
