--- a/configs.pk3dir/profile-bitmissile.cfg
+++ b/configs.pk3dir/profile-bitmissile.cfg
@@ -2,12 +2,12 @@
 //  Server information
 // ====================
 set _servername "bitmissile"
-set _servertag "[HUB]"
+set _servertag "[HUB] Bitmissile"
 set _continent "American"
 set _continent_small "NA"
 set _location "New Jersey"
-set _version "Xonotic 0.7"
-hostname "${_servertag} ${_version} ${_description} (${_continent_small})"
+set _version "Git "
+hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "developer Samual \"Ares\" Lenks"
