--- a/configs.pk3dir/profile-uc.cfg
+++ b/configs.pk3dir/profile-uc.cfg
@@ -2,12 +2,12 @@
 //  Server information
 // ====================
 set _servername "unconnected"
-set _servertag "[HUB]"
+set _servertag "[HUB] UC"
 set _continent "Europe"
 set _continent_small "EU"
 set _location "Germany"
-set _version "Xonotic git"
-hostname "${_servertag} ${_version} ${_description} (${_continent_small})"
+set _version "Git "
+hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "[unconnected] clan"
