--- a/configs.pk3dir/profile-wtwrp.cfg
+++ b/configs.pk3dir/profile-wtwrp.cfg
@@ -2,12 +2,12 @@
 //  Server information
 // ====================
 set _servername "wtwrp"
-set _servertag "[HUB]"
+set _servertag "[HUB] WTWRP"
 set _continent "European"
 set _continent_small "EU"
 set _location "Germany"
-set _version "Xonotic 0.7"
-hostname "${_servertag} ${_version} ${_description} (${_continent_small})"
+set _version "Git "
+hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "the HUB server group"
