Add proper curl url for smb server

--- a/configs.pk3dir/profile-smb.cfg
+++ b/configs.pk3dir/profile-smb.cfg
@@ -27,4 +27,4 @@ rcon_secure 1
 //  Miscellaneous
 // ===============
 //net_address "204.145.69.196"
-sv_curl_defaulturl "http://download.unconnected-clan.de/maps/"
+sv_curl_defaulturl "http://dl.dropboxusercontent.com/u/18995126/maps/"
