Add balanceXPM to settings selection

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -37,9 +37,9 @@ alias do_restart "do_restart_${_done_initializing}"
 // notes:
 //  any non-default settings added to the special environments MUST be added to default_settings with default value
 //  if a gametype alias from down below uses a cvar, its default must be added to default_settings
-alias default_settings "_nomutators; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
-alias tourney_settings "default_settings; _server_type tourney; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
-alias pickup_settings "default_settings; _server_type pickup; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+alias default_settings "_nomutators; exec balanceXonotic.cfg; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
+alias tourney_settings "default_settings; _server_type tourney; exec balanceXPM.cfg; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
+alias pickup_settings "default_settings; _server_type pickup; exec balanceXPM.cfg; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
 alias public_settings "default_settings; _server_type public; enablebots; g_start_delay 15"
 
 add_extra_vote "tourney_settings pickup_settings public_settings"
