Add "nix" mutator option

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -178,8 +178,9 @@ add_alias_NvN ft
 // internal aliases (only used by our scripts)
 alias _jetpack "toggle g_jetpack; g_grappling_hook 0; g_start_weapon_hook -1"
 alias _hook "toggle g_grappling_hook; toggle g_start_weapon_hook \"0\" \"-1\"; g_jetpack 0"
-alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_minstagib 0"
-alias _minstagib "toggle g_minstagib; g_weaponarena 0"
+alias _weaponarena "toggle g_weaponarena \"most\" \"0\"; g_minstagib 0; g_nix 0"
+alias _minstagib "toggle g_minstagib; g_nix 0; g_weaponarena 0"
+alias _nix "toggle g_nix; g_minstagib 0; g_weaponarena 0"
 alias _infammo "toggle g_use_ammunition"
 alias _pinata "toggle g_pinata"
 alias _midair "toggle g_midair"
@@ -195,15 +196,16 @@ alias jetpackarena "_weaponarena; _jetpack; do_restart"
 alias minstagib "_minstagib; _infammo; do_restart"
 alias minstahook "_minstagib; _infammo; _hook; do_restart"
 alias minstajetpack "_minstagib; _infammo; _jetpack; do_restart"
+alias nix "_nix; do_restart"
 alias infammo "_infammo; do_restart"
 alias pinata "_pinata; do_restart"
 alias midair "_midair; do_restart"
 alias dodging "_dodging; do_restart"
 
-alias _nomutators "g_weaponarena 0; g_minstagib 0; g_use_ammunition 1; g_grappling_hook 0; g_start_weapon_hook -1; g_jetpack 0; g_pinata 0; g_midair 0; g_dodging 0"
+alias _nomutators "g_weaponarena 0; g_minstagib 0; g_nix 0; g_use_ammunition 1; g_grappling_hook 0; g_start_weapon_hook -1; g_jetpack 0; g_pinata 0; g_midair 0; g_dodging 0"
 alias nomutators "_nomutators; do_restart"
 
-add_extra_vote "jetpack hook grapplinghook weaponarena hookarena jetpackarena minstagib minstahook minstajetpack infammo pinata midair dodging nomutators"
+add_extra_vote "jetpack hook grapplinghook weaponarena hookarena jetpackarena minstagib minstahook minstajetpack nix infammo pinata midair dodging nomutators"
 
 
 // ===============
