Add shuffleteams vote on votable servers

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -230,4 +230,4 @@ alias sv_fbskin_rainbow "sv_defaultcharacter 1; sv_defaultplayermodel ${_fullbri
 
 add_extra_vote "sv_fbskin_model_megaerebus sv_fbskin_model_erebus sv_fbskin_unique sv_fbskin_green sv_fbskin_orange sv_fbskin_red sv_fbskin_rainbow sv_fbskin_off"
 
-add_extra_vote "teamplay_mode g_maxplayers timelimit g_shootfromeye g_shootfromcenter"
+add_extra_vote "shuffleteams teamplay_mode g_maxplayers timelimit g_shootfromeye g_shootfromcenter"
