Update curl urls for wtwrp and uc

--- a/configs.pk3dir/profile-uc.cfg
+++ b/configs.pk3dir/profile-uc.cfg
@@ -27,4 +27,4 @@ rcon_secure 1
 //  Miscellaneous
 // ===============
 net_address "89.238.64.210"
-sv_curl_defaulturl "http://download.unconnected-clan.de/maps/"
+sv_curl_defaulturl "http://mapdl.xonotic.eu/samual/hub/"
