--- a/configs.pk3dir/profile-wtwrp.cfg
+++ b/configs.pk3dir/profile-wtwrp.cfg
@@ -27,4 +27,4 @@ rcon_secure 1
 //  Miscellaneous
 // ===============
 //net_address "204.145.69.196"
-sv_curl_defaulturl "http://download.unconnected-clan.de/maps/"
+sv_curl_defaulturl "http://mapdl.xonotic.eu/samual/hub/"
