Add server type selection to sv-dedicated.cfg

--- a/configs.pk3dir/sv-dedicated.cfg
+++ b/configs.pk3dir/sv-dedicated.cfg
@@ -4,6 +4,7 @@
 // hooks to be passed to this file:
 alias check_dmo_${_dedimode} "set _dedimode ctf"; check_dmo_${_dedimode} // _dedimode: Game mode command to execute
 alias check_dmu_${_dedimutator} "set _dedimutator \"\""; check_dmu_${_dedimmutator} // _dedimutator: Mutator command to execute (e.g. jetpack)
+alias check_dty_${_deditype} "set _deditype public"; check_dty_${_deditype} // _deditype: Server type selection (public, pickup, or tourney)
 alias check_dd_${_dedidescription} "set _dedidescription ${_dedimode}"; check_dd_${_dedidescription} // _dedidescription: Readable string for game mode and mutator
 
 // server identification
@@ -14,7 +15,7 @@ exec profile-${_profile}.cfg
 // for aliases.cfg
 set _allow_extra_votes 0
 set _done_initializing 0
-set _server_type public
+set _server_type _deditype
 
 // =================
 //  Technical Setup
