Add todo comment, fix expansion of _deditype

--- a/configs.pk3dir/sv-dedicated.cfg
+++ b/configs.pk3dir/sv-dedicated.cfg
@@ -15,7 +15,7 @@ exec profile-${_profile}.cfg
 // for aliases.cfg
 set _allow_extra_votes 0
 set _done_initializing 0
-set _server_type _deditype
+set _server_type ${_deditype}
 
 // =================
 //  Technical Setup
