A little extra cleanup for duel settings in aliases.cfg

--- a/configs.pk3dir/aliases.cfg
+++ b/configs.pk3dir/aliases.cfg
@@ -60,7 +60,7 @@ alias _maplist_duel  "g_maplist \"aggressorx bloodrun_a2 darkzone downer_final d
 alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 final_rage_duel_v2 grudge minigrudge monstrosity_a3r1 opium_v4 ospdm1_nex_r2 ospdm5_nex_r2 rush_b1 silentsiege stormkeep strength voll_aufs_maul_v3 xoylent\""
 
 // any cvar added here must be added to default_settings with default value
-alias tourney-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 15"
+alias tourney-duel     "_maplist_duel;  gametype dm;     g_maxplayers 2; g_powerups 0; timelimit_override 15"
 alias tourney-dm       "_maplist_dm;    gametype dm;     "
 alias tourney-ft       "_maplist_all;   gametype ft;     "
 alias tourney-tdm      "_maplist_tdm;   gametype tdm;    g_pickup_respawntime_weapon 15"
@@ -75,7 +75,7 @@ alias tourney-arena    "_maplist_all;   gametype arena;  "
 alias tourney-lms      "_maplist_all;   gametype lms;    "
 alias tourney-ons      "_maplist_all;   gametype ons;    "
 
-alias pickup-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 10"
+alias pickup-duel     "_maplist_duel;  gametype dm;     g_maxplayers 2; g_powerups 0; timelimit_override 10"
 alias pickup-dm       "_maplist_dm;    gametype dm;     "
 alias pickup-ft       "_maplist_all;   gametype ft;     "
 alias pickup-tdm      "_maplist_tdm;   gametype tdm;    "
@@ -90,7 +90,7 @@ alias pickup-arena    "_maplist_all;   gametype arena;  "
 alias pickup-lms      "_maplist_all;   gametype lms;    "
 alias pickup-ons      "_maplist_all;   gametype ons;    "
 
-alias public-duel     "_maplist_duel;  gametype dm;     g_powerups 0; timelimit_override 10"
+alias public-duel     "_maplist_duel;  gametype dm;     g_maxplayers 2; g_powerups 0; timelimit_override 10"
 alias public-dm       "_maplist_dm;    gametype dm;     "
 alias public-ft       "_maplist_all;   gametype ft;     "
 alias public-tdm      "_maplist_tdm;   gametype tdm;    "
@@ -111,6 +111,7 @@ alias public-ons      "_maplist_all;   gametype ons;    "
 // =============================
 //  Public aliases and settings
 // =============================
+alias duel        "${_server_type}_settings;  ${_server_type}-duel;   do_endmatch"
 alias dm          "${_server_type}_settings;  ${_server_type}-dm;     do_endmatch"
 alias freezetag   "${_server_type}_settings;  ${_server_type}-ft;     do_endmatch"
 alias tdm         "${_server_type}_settings;  ${_server_type}-tdm;    do_endmatch"
@@ -139,7 +140,6 @@ add_extra_vote "as dm tdm ctf ca freezetag assault keepaway ka nexball nb kh key
 // =============================
 //  Pickup aliases and settings
 // =============================
-alias duel "${_server_type}_settings; ${_server_type}-duel; g_maxplayers 2; do_endmatch"
 alias 1v1 "duel"; alias dm1v1 "duel"; alias 1v1dm "duel"; alias 1on1 "duel"; alias dm1on1 "duel"; alias 1on1dm "duel"
 add_extra_vote "duel 1v1 dm1v1 1v1dm 1on1 dm1on1 1on1dm"
 
